[gd_scene load_steps=4 format=3 uid="uid://cvd2wya8ga5ss"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_b68xw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkiml"]
bg_color = Color(0.729412, 0.682353, 0.627451, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcm55"]
bg_color = Color(0.803922, 0.756863, 0.701961, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Main" type="Node2D"]
script = ExtResource("1_b68xw")

[node name="MainCon" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="MainCon"]
offset_right = 1080.0
offset_bottom = 1920.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.984314, 0.972549, 0.937255, 1)

[node name="TextNum" type="Label" parent="MainCon/BG"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.024
offset_top = 133.0
offset_right = -25.92
offset_bottom = 237.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4, 0.368627, 0.333333, 1)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChessBox" type="MarginContainer" parent="MainCon/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 425.0
offset_right = -40.0
offset_bottom = -495.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ChessBorad" type="PanelContainer" parent="MainCon/BG/ChessBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gkiml")

[node name="ChessBoardMargin" type="MarginContainer" parent="MainCon/BG/ChessBox/ChessBorad"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 4

[node name="Panel" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel2" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel3" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel4" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel5" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel6" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel7" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel8" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel9" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel10" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel11" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel12" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel13" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel14" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel15" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="Panel16" type="Panel" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin/GridContainer"]
custom_minimum_size = Vector2(203, 203)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wcm55")

[node name="PieceCon" type="Control" parent="MainCon/BG/ChessBox/ChessBorad/ChessBoardMargin"]
layout_mode = 2

[node name="Button" type="Button" parent="MainCon/BG"]
layout_mode = 0
offset_left = 396.0
offset_top = 1668.0
offset_right = 668.0
offset_bottom = 1804.0
theme_override_font_sizes/font_size = 40
text = "重新开始"

[connection signal="pressed" from="MainCon/BG/Button" to="." method="_on_button_pressed"]
